fixed code spacing again

--- a/src/less/elements.less
+++ b/src/less/elements.less
@@ -53,7 +53,7 @@
 	}
 
 	.CodeMirror-lines {
-		margin-bottom: 18px;
+		padding-bottom: 20px;
 	}
 
 	.cm-matchhighlight {
